--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,8 @@
 
     <link rel="canonical" href={process.env.BASE_URL} />
 
+    <meta name="theme-color" content="#00735a" />
+
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@FerryFYI" />
     <meta name="twitter:title" content="<%= htmlWebpackPlugin.options.title %>" />
