--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
         content="width=device-width, initial-scale=1"
     ></meta>
 
-    <link rel="canonical" href={process.env.BASE_URL} />
+    <link rel="canonical" href="<%= htmlWebpackPlugin.options.url %>" />
 
     <meta name="theme-color" content="#00735a" />
 
@@ -19,7 +19,7 @@
     <meta name="twitter:description" content="<%= htmlWebpackPlugin.options.description %>" />
     <meta name="twitter:image" content="<%= htmlWebpackPlugin.options.image %>" />
 
-    <meta property="og:url" content={process.env.BASE_URL} />
+    <meta property="og:url" content="<%= htmlWebpackPlugin.options.url %>" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="<%= htmlWebpackPlugin.options.title %>" />
     <meta property="og:description" content="<%= htmlWebpackPlugin.options.description %>" />
