--- a/client/index.html
+++ b/client/index.html
@@ -13,21 +13,23 @@
 
     <meta name="theme-color" content="#00735a" />
 
+    <% const image = `${htmlWebpackPlugin.options.url}/${require('./social.png')}`; %>
+
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@FerryFYI" />
     <meta name="twitter:title" content="<%= htmlWebpackPlugin.options.title %>" />
     <meta name="twitter:description" content="<%= htmlWebpackPlugin.options.description %>" />
-    <meta name="twitter:image" content="<%= htmlWebpackPlugin.options.image %>" />
+    <meta name="twitter:image" content="<%= image %>" />
 
     <meta property="og:url" content="<%= htmlWebpackPlugin.options.url %>" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="<%= htmlWebpackPlugin.options.title %>" />
     <meta property="og:description" content="<%= htmlWebpackPlugin.options.description %>" />
-    <meta property="og:image" content="<%= htmlWebpackPlugin.options.image %>" />
+    <meta property="og:image" content="<%= image %>" />
 
     <meta itemProp="name" content="<%= htmlWebpackPlugin.options.title %>" />
     <meta itemProp="description" content="<%= htmlWebpackPlugin.options.description %>" />
-    <meta itemProp="image" content="<%= htmlWebpackPlugin.options.image %>" />
+    <meta itemProp="image" content="<%= image %>" />
 </head>
 <body>
 </body>
