--- a/client/index.html
+++ b/client/index.html
@@ -2,31 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-
     <meta
         name="viewport"
         content="width=device-width, initial-scale=1"
     ></meta>
 
+    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="description" content="<%= htmlWebpackPlugin.options.description %>" />
     <link rel="canonical" href="<%= htmlWebpackPlugin.options.url %>" />
-
-    <link rel="apple-touch-icon" sizes="57x57" href="<%= require('./images/apple-icon-57x57.png') %>" />
-    <link rel="apple-touch-icon" sizes="60x60" href="<%= require('./images/apple-icon-60x60.png') %>" />
-    <link rel="apple-touch-icon" sizes="72x72" href="<%= require('./images/apple-icon-72x72.png') %>" />
-    <link rel="apple-touch-icon" sizes="76x76" href="<%= require('./images/apple-icon-76x76.png') %>" />
-    <link rel="apple-touch-icon" sizes="114x114" href="<%= require('./images/apple-icon-114x114.png') %>" />
-    <link rel="apple-touch-icon" sizes="120x120" href="<%= require('./images/apple-icon-120x120.png') %>" />
-    <link rel="apple-touch-icon" sizes="144x144" href="<%= require('./images/apple-icon-144x144.png') %>" />
-    <link rel="apple-touch-icon" sizes="152x152" href="<%= require('./images/apple-icon-152x152.png') %>" />
-    <link rel="apple-touch-icon" sizes="180x180" href="<%= require('./images/apple-icon-180x180.png') %>" />
-    <link rel="icon" type="image/png" sizes="192x192"  href="<%= require('./images/android-icon-192x192.png') %>" />
-    <link rel="icon" type="image/png" sizes="32x32" href="<%= require('./images/favicon-32x32.png') %>" />
-    <link rel="icon" type="image/png" sizes="96x96" href="<%= require('./images/favicon-96x96.png') %>" />
-    <link rel="icon" type="image/png" sizes="16x16" href="<%= require('./images/favicon-16x16.png') %>" />
-    <meta name="msapplication-TileImage" content="<%= require('./images/ms-icon-144x144.png') %>" />
-    <meta name="msapplication-TileColor" content="<%= htmlWebpackPlugin.options.color %>" />
-    <meta name="theme-color" content="<%= htmlWebpackPlugin.options.color %>" />
 
     <% const image = `${htmlWebpackPlugin.options.url}/${require('./images/social.png')}`; %>
 
@@ -45,6 +28,8 @@
     <meta itemProp="name" content="<%= htmlWebpackPlugin.options.title %>" />
     <meta itemProp="description" content="<%= htmlWebpackPlugin.options.description %>" />
     <meta itemProp="image" content="<%= image %>" />
+
+    <link crossorigin="anonymous" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 </head>
 <body>
 </body>
