--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html class="h-full">
 <head>
     <meta charset="utf-8">
     <meta
         name="viewport"
-        content="width=device-width, initial-scale=1"
+        content="
+            initial-scale=1,
+            maximum-scale=1,
+            user-scalable=no,
+            viewport-fit=cover,
+            width=device-width
+        "
     ></meta>
 
     <title><%= htmlWebpackPlugin.options.title %></title>
@@ -31,6 +37,7 @@
 
     <link crossorigin="anonymous" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="h-full overflow-hidden flex flex-col">
+    <div class="h-full" id="root"></div>
 </body>
 </html>
