Fix overlap on top and bottom sailings

--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
 
     <link crossorigin="anonymous" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 </head>
-<body class="h-full overflow-hidden flex flex-col">
-    <div class="h-full" id="root"></div>
+<body class="h-full overflow-hidden">
+    <div class="h-full flex flex-col" id="root"></div>
 </body>
 </html>
