--- a/client/index.html
+++ b/client/index.html
@@ -4,13 +4,7 @@
     <meta charset="utf-8">
     <meta
         name="viewport"
-        content="
-            initial-scale=1,
-            maximum-scale=1,
-            user-scalable=no,
-            viewport-fit=cover,
-            width=device-width
-        "
+        content="initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover, width=device-width"
     ></meta>
 
     <title><%= htmlWebpackPlugin.options.title %></title>
