--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,8 @@
     <meta itemProp="image" content="<%= image %>" />
 
     <link crossorigin="anonymous" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+
+    <link crossorigin="anonymous" href="/fa-solid-900.woff2" rel="preload" as="font">
 </head>
 <body class="h-full overflow-hidden">
     <div class="h-full flex flex-col" id="root"></div>
