--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,15 @@
     <link crossorigin="anonymous" href="/fa-solid-900.woff2" rel="preload" as="font">
 </head>
 <body class="h-full overflow-hidden">
+    <a
+        class="
+          absolute -top-10 left-0 z-50
+          p-2 bg-black text-white
+          focus:top-0
+        "
+        href="#main"
+        tabIndex={1}
+    >Skip to main</a>
     <div class="h-full flex flex-col" id="root"></div>
 </body>
 </html>
