First party map!

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,8 @@
     <meta itemProp="name" content="<%= htmlWebpackPlugin.options.title %>" />
     <meta itemProp="description" content="<%= htmlWebpackPlugin.options.description %>" />
     <meta itemProp="image" content="<%= image %>" />
+
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body class="h-full overflow-hidden">
     <a
