--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,16 @@
     <meta itemProp="image" content="<%= image %>" />
 
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=<%= htmlWebpackPlugin.options.AW_TAG_ID %>"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', '<%= htmlWebpackPlugin.options.AW_TAG_ID %>');
+    </script>
+
 </head>
 <body class="h-full overflow-hidden">
     <a
