--- a/client/static/index.html
+++ b/client/static/index.html
@@ -32,11 +32,13 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
 
     <!-- Google Tag Manager -->
+    <% if (htmlWebpackPlugin.options.GTM_CONTAINER_ID) { %>
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','<%= htmlWebpackPlugin.options.GTM_CONTAINER_ID %>');</script>
+    <% } %>
     <!-- End Google Tag Manager -->
 
 </head>
